--- a/VIPER_Application/Login/View/LoginView.storyboard
+++ b/VIPER_Application/Login/View/LoginView.storyboard
@@ -55,9 +55,9 @@
                                     <action selector="isLoginStartButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="2BU-Ud-qaS"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I9j-Vp-g4n">
-                                <rect key="frame" x="158.66666666666666" y="715" width="76" height="39"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I9j-Vp-g4n">
+                                <rect key="frame" x="196.66666666666666" y="715" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
